--- a/src/containers/ToDoList.css
+++ b/src/containers/ToDoList.css
@@ -7,6 +7,7 @@
   margin-top: 10px;
   color: white;
   transition: background-color 1s;
+  background-color: antiquewhite;
 }
 
 .to-do-list-item h4 {
