--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,11 @@
     transform: rotate(360deg);
   }
 }
+
+.main-container {
+  flex: 1;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
