--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,11 @@
   text-align: center;
 }
 
+p {
+  word-break: break-all;
+  margin-bottom: 0;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -39,6 +44,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.content {
+  width: 100%;
 }
 
 .stepContainer {
