Lint errors fixed and code capture

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ h2 {
 
 .navbar-brand {
   display: inline-block;
-  width: calc(100% - 72px);
+  max-width: calc(100% - 72px);
   height: 70px;
 }
 
